--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <div class="attribution">
      <div class="mainContainer">
       <div class="container">
-        <img src="images/image-qr-code.png" alt="">
+        <img src="/qr-code-component-main/images/image-qr-code.png" alt="">
         
            <h1>Improve your front-end <br> skills by building projects</h1>
           
